config/tests/compilation_fails_checks/union.stderr
error: unions are not supported
 --> tests/compilation_fails_checks/union.rs:5:1
  |
5 | union Union {
  | ^^^^^
