config/tests/compilation_fails_checks/union.rs
use config::prelude::*;


#[derive(Configuration)]
union Union {
    f64: f64,
    i32: i32
}

fn main() {}